--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <h1>О нас</h1>
-        <p>Мы лучшие в своем деле. Покупайте слонов у нас!</p>
+        <p>Мы лучшие в своем деле. Покупайте завозников у нас!</p>
     </main>
     <footer>
             <span>&copy;&nbsp;Skillfactory</span>
