--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <main>
         <h1>Моя первая веб-страница</h1>
         <h2>Про меня</h2>
-        <p>Меня зовут Вася. Я работаю <strong>маркетологом</strong>. Решил получше узнать смежную профессию, чтобы разобраться как устроен веб.</p>
-        <p>Живу в Питере. Люблю кататься на велосипеде.</p>
+        <p>Меня зовут Александр. Я работаю <strong>тестировщиком</strong>. Решил получше узнать верстку, чтобы разобраться как устроен веб.</p>
+        <p>Живу в Питере. Люблю рисовать и проводить время с друзьями.</p>
         <h2>Чему я хочу научиться</h2>
         <p>На <em>этом</em> курсе я хотел бы научиться создавать сайты с нуля.</p>
     </main>
